assets/scss/components/content/_archive-artworks.scss
body.post-type-archive-artwork {
	overflow-x: hidden;

	&.no-sidebar .site-main {
		background-color: white;
		overflow-x: hidden;
		position: relative;
		padding: 0;

		@media(min-width: 63.9375em) {
			margin: 0 2em;
		}
	}
}

.collection {
	max-height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px));
	overflow-y: hidden;
	overflow-x: visible;
	transform: translateX(0%);
	background-color: white;
	position: relative;
	transition: transform .5s ease-in-out;

	&[data-state=open] {
		@media (max-width: 63.9375em) {
			transform: translateX(-50%);
		}
	}

	display: grid;
	grid-template-rows: var(--collection-header-height) auto;
	
	@media (max-width: 63.9375em) {
		width: 200%;
		grid-template-columns: repeat(2, 50%);
	}

	@media (min-width: 64em) {
		grid-template-columns: repeat(2, 50%);
	}

	.collection__header {
		grid-column: 1 / 2;
		grid-row: 1 / 2;
		border-right: 1px solid var(--color-black);

		@media (max-width: 63.9375em) {
			border-right: 2px solid var(--color-black);
		}
		@media (min-width: 64em) {
			border-right: 1px solid var(--color-black);
		}
	}

	.collection__search-container {
		position: relative;

		&::after {
			content: "";
			position: absolute;
			top: 4px; 
			left: 6px;
			width: calc(2.5em);
			height: calc(100% - 8px);
			background-image: url("assets/img/icons/bpa_search.svg");
			background-repeat: no-repeat;
		}

		input.collection__search {
			border-color: var(--color-black);
			border-width: 2px;
			transform: translateX(2px);
			border-radius: 0;
			width: 100%;
			padding-left: calc(2.5em);
		}
	}


	.collection__artists {
		grid-column: 1 / 2;
		grid-row: 2 / 3;
		position: relative;
		height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px) - var(--collection-header-height, 0px));

		@media (max-width: 63.9375em) {
			border-right: 2px solid var(--color-black);
		}
		@media (min-width: 64em) {
			border-right: 1px solid var(--color-black);
		}
		
		.artists__list {
			height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px) - var(--collection-header-height, 0px));
			overflow-y: auto;
			overflow-x: hidden;
			padding: 0.5rem 0.5rem calc(19rem / 16);
			
			// Hide scrollbar firefox / edge?
			-ms-overflow-style: none;  /* IE and Edge */
			scrollbar-width: none;
			
			// hide scrollbar chrome/ opera / safari?
			&::-webkit-scrollbar {
				display: none;
			}
			
			.artists-group {
				margin-block-end: calc(19rem / 16);
				text-transform: uppercase;
				
				&:last-of-type {
					margin-block-end: 0;
				}
				
				span.artists-group__label {
					margin-bottom: calc(19rem / 16);
					display: block;
					width: 1em;
				}
				
				.artist__button {
					margin-block-end: calc(14rem / 16);
					
					&:last-of-type {
						margin-block-end: 0;
					}
				}
			}
		}
		
	}
	
	.collection__artworks {
		grid-column: 2 / 3;
		grid-row: 1 / 3;
		overflow-y: auto;
		overflow-x: hidden;
		height: calc(var(--vh, 1vh) * 90 - var(--wp-admin-bar, 0px));
		transition: all .5s ease-in-out;
		background-color: white;
		position: relative;
		padding: unquote("min(6vh, 60px) min(8vw, 115px) min(8vh, 90px)");
		
		@media (max-width: 63.9375em) {
			padding-left: unquote("min(6vw, 115px)");
			padding-right: unquote("min(6vw, 115px)");
			border-left: 2px solid var(--color-black);
		}
		@media (min-width: 64em) {
			border-left: 1px solid var(--color-black);
		}
		
		&::before {
			content: "";
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			width: 0%;
			height: 100%;
			background-color: var(--color-black);
			transition: width .5s ease-in-out, background-color .5s ease-in-out;;
			z-index: 999;
		}
		
		&[data-state=loading]::before,
		&[data-state=unloading]::before {
			width: 100%;
			background-color: var(--color-white);
			left: 0;
			right: unset;
		}
		
		&[data-state=loaded]::before,
		&[data-state=unloaded]::before {
			width: 0%;
			background-color: var(--color-black);
			right: 0;
			left: unset;
		}
		
		.artworks__return {
			position: absolute;
			top: -2px;
			left: -2px;
			
			@media(min-width: 63.9357em){
				display: none;
			}
		}

		.artworks__list {
			padding: 0;
			list-style-type: none;
			
			.artwork {
				margin-bottom: unquote("min(2vh, 20px)");

				.artwork__title {
					
					button {
						border: none;
						background: initial;
						padding: 0;
						color: black;
						cursor: pointer;
						text-transform: none;
						text-decoration: underline;
					
						&:hover {
							text-decoration: none;
						}
					}
				}

				.artwork__info {
					display: none;
					padding-block-end: 1vh;

					&.visible {
						display: block;
					}
					
					p {
						margin: 0;
					}

					.artwork__thumbnail {
						display: flex;
						flex-flow: column nowrap;
						margin-block-start: unquote("min(4vh, 38px)");
						margin-block-end: unquote("min(4vh, 40px)");
						align-items: center;
						
						@media (max-width: 63.9375em) {
						}
		
						@media (min-width: 64em) {
						}
					}

					.artwork__loan,
					.artwork__sale {
						position: relative;
						width: fit-content;

						&::after {
							position: absolute;
							content: "";
							right: -1.5em;
							top: calc(1em - 50%);
							height: 1em;
							width: 1em;
							background-image: url("assets/img/icons/bpa_mail.svg");
						}

					}
				}
			}
		}
	}
}

